<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICalendar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">New Event</string>
    <string name="title_activity_create_event">Create a new event</string>
    <string name="title_activity_calendar_view">My Calendar</string>
    <string name="title_activity_time_picker">Pick a Time</string>
    <string name="title_activity_save">Save</string>
    <string name="title_activity_load_event">Load</string>
    <string name="intro">Welcome to your iCalendar! Tap the button to view your calendar.  Swipe toward the right to save an event!  Swipe toward the left to load an event!</string>
    <string name="button_viewCalendar">View Calendar</string>
    <string name="button_pickTime">Pick a Time</string>
    <string name="button_add_event">Add Event</string>
    <string name="button_save_event">Save Event</string>
    <string name="button_save">Save Calendar</string>
    <string name="button_load_event">Load an Event</string>
    <string name="time_picker">Time Picker</string>
    <string name="time_txt">Selected Time:</string>
    <string name="change_time_button_label">Choose Time</string>
    <string name="load">Load</string>
    <string name="hint_event_name">event name</string>
    <string name="title_activity_test">TestActivity</string>

</resources>